force-app/main/default/objects/Work_Order__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>(BLANKVALUE(Labor_Hours__c, 0) * BLANKVALUE(Assigned_Technician__r.Hourly_Rate__c, 0)) + BLANKVALUE(Parts_Cost__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>