force-app/main/default/objects/Work_Order__c/fields/Work_Summary__c.field-meta.xml
<CustomField>
    <fullName>Work_Summary__c</fullName>
    <label>Work Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>