force-app/main/default/objects/Work_Order__c/validationRules/Completed_Requires_Hours_And_Summary.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_Requires_Hours_And_Summary</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &apos;Completed&apos;) &amp;&amp;
(Labor_Hours__c = 0 || ISBLANK(Labor_Hours__c) || ISBLANK(Work_Summary__c))</errorConditionFormula>
    <errorMessage>Completed work orders must have labor hours and a work summary.</errorMessage>
</ValidationRule>